<resources>
    <string name="app_name">RunningTracker</string>
    <string name="title_activity_maps">RunningTracker</string>
    <string name="notificationBuilder_title">Still trying to get a fix to some satellites</string>
    <string name="title_content">Title_Content</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_maps">maps</string>

    <!-- AlertDialog messages -->
    <string name="no_run_available">Currently, there is no run available!</string>
    <string name="select_one_run">Select one run</string>
    <string name="button_cancel">Cancel</string>
    <string name="buttonOk">Okay</string>
    <string name="save_exercise">Save exercise and comment it?</string>
    <string name="comment_exercise">Comment on your last exercise</string>
    <string name="location_service">Please, turn location service on!</string>
    <string name="open_location_settings">Open location settings</string>
    <string name="buttonSave">Save</string>
    <string name="working_with_kalman_filter">Working on normalizing your data</string>
    <string name="work_in_progress">Working. Please wait...</string>

    <!-- TextView activity_settings.xml -->
    <string name="update_minimum_distance_meter">Update minimum distance meter</string>
    <string name="update_minimum_time_sec">Update minimum time sec</string>
    <string name="delete_all_entries_from_database">Delete all entries from database</string>
    <string name="normalize_data_with_kalman_filter">Normalize data with Kalman-filter</string>
    <string name="google_map_type">Google map type</string>

    <!-- Button activity_settings.xml -->
    <string name="save">Save</string>
    <string name="export_database">Export database</string>
    <string name="export">Export</string>
    <string name="delete">Delete</string>
    <string name="kalmanfilter">Kalman-Filter</string>

    <!-- RadioButton activity_settings.xml -->
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="none">None</string>
    <string name="terrain">Terrain</string>
    <string name="satellite">Satellite</string>

    <!-- MapsActivity -->
    <string name="serviceName">at.co.netconsulting.runningtracker.service.ForegroundService</string>
    <string name="starting_position">Start</string>

    <!-- SettingsActivity -->
    <string name="saveAndCommentPause">Save and comment, if pausing in database</string>
    <string name="recording_profil">Recording Profil</string>
    <string name="oneSecondOneMeter">Exact</string>
    <string name="oneSecondTenMeter">Normal</string>
    <string name="thirteenSecondTwentyMeter">Battery saving</string>
    <string name="thirteenMinutesOneHundredMeter">Maximum battery saving</string>
    <string name="individual">Individual</string>
    <string name="any_number">Any number</string>
    <string name="goToLastLocation">Go to last location</string>
    <string name="delete_single_entry">Choose run to delete</string>
    <string name="delete_chosen_single_entry">Delete single entry</string>
    <string name="person">Runner`s name</string>
    <string name="anonym_person">Anonym</string>
    <string name="graph_plotting">Data successfully retrieved.\nPlotting your graph now!</string>
    <string name="title_graph">Distance / Speed Graph</string>
    <string name="title_x_axis">Distance</string>
    <string name="title_y_axis">Speed</string>
    <string name="reduceTooManyLatLng">Reduce too many LatLng points</string>
    <string name="all_entries_deleted">All entries successfully deleted!</string>
    <string name="single_entry_deleted">Single entry successfully deleted!</string>
    <string name="save_settings_map_type_rec_profil_runners_name">Google map type, Recording Profil, Runner`s name, and backup database were saved</string>
    <string name="distance_speed">Distance (in meter)/Speed</string>
    <string name="distance_per_km_h">Distance per km/h</string>
    <string name="dialog_message">Are you sure to delete all entries?</string>
    <string name="dialog_title">Delete all entries</string>
    <string name="do_you_want_to_delete_all_entries">Do you want to delete all entries?</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="showDistanceCovered">Show distance covered</string>
    <string name="cycle_time">Cycle time</string>
    <string name="lap">Lap</string>
    <string name="time">Time</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="gather_information">Still trying to gather information!</string>
    <string name="battery_optimization">Turn off battery optimization</string>
    <string name="please_comment_your_run">Please, comment your run!</string>
    <string name="buttonWithoutColoring">Without coloring</string>
    <string name="style_failed">Style parsing failed.</string>
    <string name="isInBetween">isInBetweenSunriseSunset</string>
    <string name="day_night_modus">Automatic day/night modus</string>
    <string name="enable_traffic">Enable traffic</string>
    <string name="time_speed">Time (in seconds)/Speed</string>
    <string name="import_database_file">Import database</string>
    <string name="button_import">Import</string>
    <string name="buttonCloseDialog">Close dialog</string>
    <string name="export_database_scheduled">Backup database every x day (0 means no backup at all)</string>
    <string name="update_entry">Your entry was successfully updated</string>
    <string name="showtrack">Show track</string>
    <string name="colouredtrack">Colour track</string>
    <string name="updatetrack">Update track</string>
    <string name="voiceMessage">Voice message</string>
    <string name="update_comment">Describe your last run</string>
    <string name="button_delete">Delete</string>
    <string name="button_update">Update</string>
    <string name="finish">Finish</string>
    <string name="title_activity_detailed_graph">DetailedGraphActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>