<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewGeneralSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="General settings"
                    android:textColor="#4CAF50"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textAlignment="center"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/textViewMapType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/google_map_type" />

                <RadioGroup
                    android:id="@+id/radioGroupMaptype"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton_map_type_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/normal"
                        android:onClick="onClickRadioButtonNormal"/>
                    <RadioButton
                        android:id="@+id/radioButton_map_type_hybrid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hybrid"
                        android:onClick="onClickRadioButtonHybrid"/>
                    <RadioButton
                        android:id="@+id/radioButton_map_none"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/none"
                        android:onClick="onClickRadioButtonNone"/>
                    <RadioButton
                        android:id="@+id/radioButton_map_type_terrain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terrain"
                        android:onClick="onClickRadioButtonTerrain"/>
                    <RadioButton
                        android:id="@+id/radioButton_map_type_satellite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/satellite"
                        android:onClick="onClickRadioButtonSatellite"/>
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>

                <TextView
                    android:id="@+id/textViewRecordingProfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recording_profil" />

                <RadioGroup
                    android:id="@+id/radioGroupRecordingProfil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButtonExact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/oneSecondOneMeter"
                        android:onClick="onClickRadioButtonBatteryGroup"/>
                    <RadioButton
                        android:id="@+id/radioButtonNormalBattery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/oneSecondTenMeter"
                        android:onClick="onClickRadioButtonBatteryGroup"/>
                    <RadioButton
                        android:id="@+id/radioButtonSavingBattery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thirteenSecondTwentyMeter"
                        android:onClick="onClickRadioButtonBatteryGroup"/>
                    <RadioButton
                        android:id="@+id/radioButtonMaximumSavingBattery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thirteenMinutesOneHundredMeter"
                        android:onClick="onClickRadioButtonBatteryGroup"/>
                    <!--                    <RadioButton-->
                    <!--                        android:id="@+id/radioButtonFast"-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:text="@string/oneSecondTenMeter"-->
                    <!--                        android:onClick="onClickRadioButtonBatteryGroup"/>-->
                    <RadioButton
                        android:id="@+id/radioButtonIndividual"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/individual"
                        android:onClick="onClickRadioButtonBatteryGroup"/>
                </RadioGroup>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>

                <Switch
                    android:id="@+id/switchBatteryOptimization"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_optimization"
                    android:onClick="switchEvent"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>

                <Switch
                    android:id="@+id/switchDayNightModus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day_night_modus"
                    android:onClick="onClickDayNightModus"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>

                <Switch
                    android:id="@+id/switchShowTraffic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_traffic"
                    android:onClick="onClickEnableTraffic"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>

                <Switch
                    android:id="@+id/switchVoiceMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Voice message every 10 kilometers"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>

                <TextView
                    android:id="@+id/textViewMinDistanceMeter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_minimum_distance_meter" />

                <EditText
                    android:id="@+id/editTextNumberSignedMinimumDistanceMeter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/any_number"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textViewMinTimeMs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_minimum_time_sec" />

                <EditText
                    android:id="@+id/editTextNumberSignedMinimumTimeMs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/any_number"
                    android:inputType="numberDecimal" />

                <TextView
                    android:id="@+id/textViewPerson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/person" />

                <EditText
                    android:id="@+id/editTextPerson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/anonym_person"
                    android:inputType="text" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"/>

                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:background="@drawable/rounded_corner"
                    android:onClick="save"/>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</LinearLayout>