<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray">

    <EditText
        android:id="@+id/alertdialog_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="Search" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/layout_add_new_member"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center">

            <Button
                android:id="@+id/defaulttrack"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left|bottom"
                android:background="@drawable/rounded_corner"
                android:onClick="showTrack"
                android:text="@string/showtrack" />

            <Button
                android:id="@+id/colouredtrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:background="@drawable/rounded_corner"
                android:onClick="showTrack"
                android:text="@string/colouredtrack" />

            <Button
                android:id="@+id/updatetrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:background="@drawable/rounded_corner"
                android:onClick="showTrack"
                android:text="@string/updatetrack" />

        </LinearLayout>

        <ListView
            android:id="@+id/alertdialog_Listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@id/layout_add_new_member"
            android:background="@color/lightgrey" />
    </RelativeLayout>
</LinearLayout>