<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatabaseActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center|center_horizontal"
            android:text="Automatic backup"
            android:textColor="#4CAF50"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textViewEmpty0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textViewExportDatabaseScheduled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:onClick="backup_interval"
            android:text="@string/export_database_scheduled" />

        <TextView
            android:id="@+id/textViewEmpty1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textViewBackup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center|center_horizontal"
            android:text="Backup"
            android:textColor="#4CAF50"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textViewEmpty2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textViewImportGPX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:onClick="importGPX"
            android:text="@string/import_database_file" />

        <TextView
            android:id="@+id/textViewEmpty3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textViewExportDatabase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:onClick="export"
            android:text="@string/export_database" />

        <TextView
            android:id="@+id/textViewEmpty4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/textViewDeleteDatabase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:onClick="delete"
            android:text="@string/delete_all_entries_from_database" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>